--- a/css/styles.css
+++ b/css/styles.css
@@ -255,6 +255,158 @@ img {
 .modal-clouse-pseudo-btn::after {
     transform: translate(-50%, -50%) rotate(45deg);
 }
+/* ddddddddddddddddddddddddddddddddddddddddddd */
+.form  {
+    display: flex;
+    flex-direction: column;
+}
+.form > .form-container {
+    display: flex;
+    flex-direction: column;
+}
+.form-header {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 12px;
+}
+.form-container {
+   margin-bottom: 10px;
+    position: relative;
+}
+.input-label {
+    margin-bottom: 4px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
+    color: #757575;
+}
+.contact-us-input {
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 42px;
+    box-sizing: border-box;
+   
+
+}
+.contact-us-input:focus-within {
+    outline: none;
+    border: 1px solid #2196F3;
+    border-radius: 4px;
+}
+.form-container:focus-within>.input-label-decor {
+    fill: #188CE8;
+}
+.contact-us-textarea {
+    height: 120px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    box-sizing: border-box;
+    border-radius: 4px;
+    resize: none;
+    box-sizing: border-box;
+}
+.contact-us-textarea:focus-within {
+    outline: none;
+    border: 1px solid #2196F3;
+    border-radius: 4px;
+}
+textarea::placeholder {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+    padding: 12px 16px;
+}
+.input-label-decor {
+    position: absolute;
+    top: 28px;
+    left: 15px;
+}
+.username-icon {
+    width: 18px;
+    height: 18px;
+    /* fill: #212121; */
+
+}
+.contact-us-textarea {
+    margin-bottom: 20px;
+}
+.checkbox-label {
+    position: relative;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #757575;
+    margin-bottom: 30px;
+    padding-left: 32px;
+}
+
+.checkbox-input {
+    position: absolute;
+    width: 0;
+    height: 0;
+    z-index: -1;
+    /* display: none; */
+  
+}
+.custom-checkbox {
+    position: absolute;
+    top: 4px;
+    left: 7px;
+    border: 2px solid black;
+    width: 16px;
+    height: 15px;
+    border-radius: 3px;
+
+}
+.checkbox-input:checked~.custom-checkbox>.label-svg {
+    fill: #FFFFFF;
+}
+.checkbox-input:checked~.custom-checkbox {
+    background-color: #188CE8;
+    border: none;
+}
+
+
+.label-svg {
+    position: absolute;
+    top: 4px;
+    left: 3px;
+    width: 11px;
+    height: 8px;
+    fill: transparent;
+}
+.contact-us-checkbox-link {
+    text-decoration: underline;
+    color: var(--main-hover-focus-font-color);
+}
+.contact-us-btn {
+    display: inline-block;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 2;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    background-color: #2196F3;
+    padding: 10px 56px;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    max-width: 200px;
+    margin: 0 auto;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.contact-us-btn:hover,
+.contact-us-btn:focus {
+    background: #188CE8;
+}
+
 
  /*
     .backdrop {
@@ -515,6 +667,7 @@ img {
     line-height: 1.71;
     font-style: normal;
 }
+
 .footer-mail {
     padding-top: 9px;
     padding-bottom: 9px;
@@ -533,8 +686,9 @@ img {
 }
 .second-box {
     padding-top: 12px;
+    margin-right: 93px;
 }
-.footer-second-header {
+.footer-header {
     text-transform: uppercase;
     font-weight: 700;
     font-size: 14px;
@@ -549,7 +703,65 @@ img {
 .second-box .card-item-social-link:hover {
     background-color: var(--footer-hover-focus-color);
 }
+.third-box {
+    padding-top: 12px;
+}
+.footer-email-input {
+    background-color: rgba(47, 48, 58, 1);
+    height: 50px;
+    /* border: none; */
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    box-sizing: border-box;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    width: 358px;
+    margin-right: 12px;
+}
+.footer-email-input:focus-within {
+    /* border-color: inherit; */
+    outline: none;
+}
+.footer-email-input::placeholder {
+    font-size: 16px;
+    line-height: 20px;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+    margin: 15px, 0px, 15px, 16px;
+    padding: 15px 16px;
+}
+/* .contact-us-textarea:focus-within {
+    outline: none;
+    border: 1px solid #2196F3;
+    border-radius: 4px;
+} */
 
+.footer-btn {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    /* display: flex;
+    align-items: center;
+    text-align: center; */
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    background-color: #2196F3;
+    border-radius: 4px;
+    border: none;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    width: 200px;
+    padding: 10px 29px;
+}
+.footer-btn-contant {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer-btn-decor {
+    width: 24px;
+    height: 24px;
+    fill: #FFFFFF;
+    margin-left: 10px;
+}
 
 /* Верхняя линия портфолио */
 .portfolio-activ {
