--- a/css/styles.css
+++ b/css/styles.css
@@ -914,6 +914,9 @@ textarea::placeholder {
     margin-right: 30px; */
     position: relative;
 }
+.portfolio-item:hover {
+    box-shadow: 1px 6px 6px rgb(229, 229, 229, 0.9);
+}
 
 .portfolio-card-image {
     position: relative;
@@ -927,7 +930,6 @@ textarea::placeholder {
     left: 0;
     display: flex;
     align-items: center;
-
 
     padding: 24px;
     background-color: rgba(33, 150, 243, 0.9);
